// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build: bundle 1`] = `
"/******/ (function(modules) { // webpackBootstrap
/******/ 	// The module cache
/******/ 	var installedModules = {};
/******/
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/
/******/ 		// Check if module is in cache
/******/ 		if(installedModules[moduleId]) {
/******/ 			return installedModules[moduleId].exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = installedModules[moduleId] = {
/******/ 			i: moduleId,
/******/ 			l: false,
/******/ 			exports: {}
/******/ 		};
/******/
/******/ 		// Execute the module function
/******/ 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
/******/
/******/ 		// Flag the module as loaded
/******/ 		module.l = true;
/******/
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/
/******/
/******/ 	// expose the modules object (__webpack_modules__)
/******/ 	__webpack_require__.m = modules;
/******/
/******/ 	// expose the module cache
/******/ 	__webpack_require__.c = installedModules;
/******/
/******/ 	// define getter function for harmony exports
/******/ 	__webpack_require__.d = function(exports, name, getter) {
/******/ 		if(!__webpack_require__.o(exports, name)) {
/******/ 			Object.defineProperty(exports, name, { enumerable: true, get: getter });
/******/ 		}
/******/ 	};
/******/
/******/ 	// define __esModule on exports
/******/ 	__webpack_require__.r = function(exports) {
/******/ 		if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 			Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 		}
/******/ 		Object.defineProperty(exports, '__esModule', { value: true });
/******/ 	};
/******/
/******/ 	// create a fake namespace object
/******/ 	// mode & 1: value is a module id, require it
/******/ 	// mode & 2: merge all properties of value into the ns
/******/ 	// mode & 4: return value when already ns object
/******/ 	// mode & 8|1: behave like require
/******/ 	__webpack_require__.t = function(value, mode) {
/******/ 		if(mode & 1) value = __webpack_require__(value);
/******/ 		if(mode & 8) return value;
/******/ 		if((mode & 4) && typeof value === 'object' && value && value.__esModule) return value;
/******/ 		var ns = Object.create(null);
/******/ 		__webpack_require__.r(ns);
/******/ 		Object.defineProperty(ns, 'default', { enumerable: true, value: value });
/******/ 		if(mode & 2 && typeof value != 'string') for(var key in value) __webpack_require__.d(ns, key, function(key) { return value[key]; }.bind(null, key));
/******/ 		return ns;
/******/ 	};
/******/
/******/ 	// getDefaultExport function for compatibility with non-harmony modules
/******/ 	__webpack_require__.n = function(module) {
/******/ 		var getter = module && module.__esModule ?
/******/ 			function getDefault() { return module['default']; } :
/******/ 			function getModuleExports() { return module; };
/******/ 		__webpack_require__.d(getter, 'a', getter);
/******/ 		return getter;
/******/ 	};
/******/
/******/ 	// Object.prototype.hasOwnProperty.call
/******/ 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };
/******/
/******/ 	// __webpack_public_path__
/******/ 	__webpack_require__.p = \\"\\";
/******/
/******/
/******/ 	// Load entry module and return exports
/******/ 	return __webpack_require__(__webpack_require__.s = \\"./app.ts\\");
/******/ })
/************************************************************************/
/******/ ({

/***/ \\"./app.ts\\":
/*!****************!*\\\\
  !*** ./app.ts ***!
  \\\\****************/
/*! no static exports found */
/***/ (function(module, exports, __webpack_require__) {

\\"use strict\\";
eval(\\"\\\\nexports.__esModule = true;\\\\nvar submodule = __webpack_require__(/*! ./submodule/submodule */ \\\\\\"./submodule/submodule.ts\\\\\\");\\\\nvar externalLib = __webpack_require__(/*! externalLib */ \\\\\\"./lib/externalLib.js\\\\\\");\\\\nexternalLib.doSomething(submodule);\\\\n\\\\n\\\\n//# sourceURL=webpack:///./app.ts?\\");

/***/ }),

/***/ \\"./lib/externalLib.js\\":
/*!****************************!*\\\\
  !*** ./lib/externalLib.js ***!
  \\\\****************************/
/*! no static exports found */
/***/ (function(module, exports) {

eval(\\"module.exports = {\\\\n    doSomething: function() { }   \\\\n}\\\\n\\\\n//# sourceURL=webpack:///./lib/externalLib.js?\\");

/***/ }),

/***/ \\"./submodule/submodule.ts\\":
/*!********************************!*\\\\
  !*** ./submodule/submodule.ts ***!
  \\\\********************************/
/*! no static exports found */
/***/ (function(module, exports, __webpack_require__) {

\\"use strict\\";
eval(\\"\\\\nvar externalLib = __webpack_require__(/*! externalLib */ \\\\\\"./lib/externalLib.js\\\\\\");\\\\nexternalLib.doSomething(\\\\\\"\\\\\\");\\\\nvar message = \\\\\\"Hello from submodule\\\\\\";\\\\nmodule.exports = message;\\\\n\\\\n\\\\n//# sourceURL=webpack:///./submodule/submodule.ts?\\");

/***/ })

/******/ });"
`;

exports[`build: bundle 2`] = `
"/******/ (function(modules) { // webpackBootstrap
/******/ 	// The module cache
/******/ 	var installedModules = {};
/******/
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/
/******/ 		// Check if module is in cache
/******/ 		if(installedModules[moduleId]) {
/******/ 			return installedModules[moduleId].exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = installedModules[moduleId] = {
/******/ 			i: moduleId,
/******/ 			l: false,
/******/ 			exports: {}
/******/ 		};
/******/
/******/ 		// Execute the module function
/******/ 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
/******/
/******/ 		// Flag the module as loaded
/******/ 		module.l = true;
/******/
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/
/******/
/******/ 	// expose the modules object (__webpack_modules__)
/******/ 	__webpack_require__.m = modules;
/******/
/******/ 	// expose the module cache
/******/ 	__webpack_require__.c = installedModules;
/******/
/******/ 	// define getter function for harmony exports
/******/ 	__webpack_require__.d = function(exports, name, getter) {
/******/ 		if(!__webpack_require__.o(exports, name)) {
/******/ 			Object.defineProperty(exports, name, { enumerable: true, get: getter });
/******/ 		}
/******/ 	};
/******/
/******/ 	// define __esModule on exports
/******/ 	__webpack_require__.r = function(exports) {
/******/ 		if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 			Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 		}
/******/ 		Object.defineProperty(exports, '__esModule', { value: true });
/******/ 	};
/******/
/******/ 	// create a fake namespace object
/******/ 	// mode & 1: value is a module id, require it
/******/ 	// mode & 2: merge all properties of value into the ns
/******/ 	// mode & 4: return value when already ns object
/******/ 	// mode & 8|1: behave like require
/******/ 	__webpack_require__.t = function(value, mode) {
/******/ 		if(mode & 1) value = __webpack_require__(value);
/******/ 		if(mode & 8) return value;
/******/ 		if((mode & 4) && typeof value === 'object' && value && value.__esModule) return value;
/******/ 		var ns = Object.create(null);
/******/ 		__webpack_require__.r(ns);
/******/ 		Object.defineProperty(ns, 'default', { enumerable: true, value: value });
/******/ 		if(mode & 2 && typeof value != 'string') for(var key in value) __webpack_require__.d(ns, key, function(key) { return value[key]; }.bind(null, key));
/******/ 		return ns;
/******/ 	};
/******/
/******/ 	// getDefaultExport function for compatibility with non-harmony modules
/******/ 	__webpack_require__.n = function(module) {
/******/ 		var getter = module && module.__esModule ?
/******/ 			function getDefault() { return module['default']; } :
/******/ 			function getModuleExports() { return module; };
/******/ 		__webpack_require__.d(getter, 'a', getter);
/******/ 		return getter;
/******/ 	};
/******/
/******/ 	// Object.prototype.hasOwnProperty.call
/******/ 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };
/******/
/******/ 	// __webpack_public_path__
/******/ 	__webpack_require__.p = \\"\\";
/******/
/******/
/******/ 	// Load entry module and return exports
/******/ 	return __webpack_require__(__webpack_require__.s = \\"./app.ts\\");
/******/ })
/************************************************************************/
/******/ ({

/***/ \\"./app.ts\\":
/*!****************!*\\\\
  !*** ./app.ts ***!
  \\\\****************/
/*! no static exports found */
/***/ (function(module, exports, __webpack_require__) {

\\"use strict\\";
eval(\\"\\\\nexports.__esModule = true;\\\\nvar submodule = __webpack_require__(/*! ./submodule/submodule */ \\\\\\"./submodule/submodule.ts\\\\\\");\\\\nvar externalLib = __webpack_require__(/*! externalLib */ \\\\\\"./lib/externalLib.js\\\\\\");\\\\nexternalLib.doSomething2(submodule);\\\\n\\\\n\\\\n//# sourceURL=webpack:///./app.ts?\\");

/***/ }),

/***/ \\"./lib/externalLib.js\\":
/*!****************************!*\\\\
  !*** ./lib/externalLib.js ***!
  \\\\****************************/
/*! no static exports found */
/***/ (function(module, exports) {

eval(\\"module.exports = {\\\\n    doSomething: function() { }   \\\\n}\\\\n\\\\n//# sourceURL=webpack:///./lib/externalLib.js?\\");

/***/ }),

/***/ \\"./submodule/submodule.ts\\":
/*!********************************!*\\\\
  !*** ./submodule/submodule.ts ***!
  \\\\********************************/
/*! no static exports found */
/***/ (function(module, exports, __webpack_require__) {

\\"use strict\\";
eval(\\"\\\\nvar externalLib = __webpack_require__(/*! externalLib */ \\\\\\"./lib/externalLib.js\\\\\\");\\\\nexternalLib.doSomething(\\\\\\"\\\\\\");\\\\nvar message = \\\\\\"Hello from submodule\\\\\\";\\\\nmodule.exports = message;\\\\n\\\\n\\\\n//# sourceURL=webpack:///./submodule/submodule.ts?\\");

/***/ })

/******/ });"
`;

exports[`build: bundle 3`] = `
"/******/ (function(modules) { // webpackBootstrap
/******/ 	// The module cache
/******/ 	var installedModules = {};
/******/
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/
/******/ 		// Check if module is in cache
/******/ 		if(installedModules[moduleId]) {
/******/ 			return installedModules[moduleId].exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = installedModules[moduleId] = {
/******/ 			i: moduleId,
/******/ 			l: false,
/******/ 			exports: {}
/******/ 		};
/******/
/******/ 		// Execute the module function
/******/ 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
/******/
/******/ 		// Flag the module as loaded
/******/ 		module.l = true;
/******/
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/
/******/
/******/ 	// expose the modules object (__webpack_modules__)
/******/ 	__webpack_require__.m = modules;
/******/
/******/ 	// expose the module cache
/******/ 	__webpack_require__.c = installedModules;
/******/
/******/ 	// define getter function for harmony exports
/******/ 	__webpack_require__.d = function(exports, name, getter) {
/******/ 		if(!__webpack_require__.o(exports, name)) {
/******/ 			Object.defineProperty(exports, name, { enumerable: true, get: getter });
/******/ 		}
/******/ 	};
/******/
/******/ 	// define __esModule on exports
/******/ 	__webpack_require__.r = function(exports) {
/******/ 		if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 			Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 		}
/******/ 		Object.defineProperty(exports, '__esModule', { value: true });
/******/ 	};
/******/
/******/ 	// create a fake namespace object
/******/ 	// mode & 1: value is a module id, require it
/******/ 	// mode & 2: merge all properties of value into the ns
/******/ 	// mode & 4: return value when already ns object
/******/ 	// mode & 8|1: behave like require
/******/ 	__webpack_require__.t = function(value, mode) {
/******/ 		if(mode & 1) value = __webpack_require__(value);
/******/ 		if(mode & 8) return value;
/******/ 		if((mode & 4) && typeof value === 'object' && value && value.__esModule) return value;
/******/ 		var ns = Object.create(null);
/******/ 		__webpack_require__.r(ns);
/******/ 		Object.defineProperty(ns, 'default', { enumerable: true, value: value });
/******/ 		if(mode & 2 && typeof value != 'string') for(var key in value) __webpack_require__.d(ns, key, function(key) { return value[key]; }.bind(null, key));
/******/ 		return ns;
/******/ 	};
/******/
/******/ 	// getDefaultExport function for compatibility with non-harmony modules
/******/ 	__webpack_require__.n = function(module) {
/******/ 		var getter = module && module.__esModule ?
/******/ 			function getDefault() { return module['default']; } :
/******/ 			function getModuleExports() { return module; };
/******/ 		__webpack_require__.d(getter, 'a', getter);
/******/ 		return getter;
/******/ 	};
/******/
/******/ 	// Object.prototype.hasOwnProperty.call
/******/ 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };
/******/
/******/ 	// __webpack_public_path__
/******/ 	__webpack_require__.p = \\"\\";
/******/
/******/
/******/ 	// Load entry module and return exports
/******/ 	return __webpack_require__(__webpack_require__.s = \\"./app.ts\\");
/******/ })
/************************************************************************/
/******/ ({

/***/ \\"./app.ts\\":
/*!****************!*\\\\
  !*** ./app.ts ***!
  \\\\****************/
/*! no static exports found */
/***/ (function(module, exports, __webpack_require__) {

\\"use strict\\";
eval(\\"\\\\nexports.__esModule = true;\\\\nvar submodule = __webpack_require__(/*! ./submodule/submodule */ \\\\\\"./submodule/submodule.ts\\\\\\");\\\\nvar externalLib = __webpack_require__(/*! externalLib */ \\\\\\"./lib/externalLib.js\\\\\\");\\\\nexternalLib.doSomething(submodule);\\\\n\\\\n\\\\n//# sourceURL=webpack:///./app.ts?\\");

/***/ }),

/***/ \\"./lib/externalLib.js\\":
/*!****************************!*\\\\
  !*** ./lib/externalLib.js ***!
  \\\\****************************/
/*! no static exports found */
/***/ (function(module, exports) {

eval(\\"module.exports = {\\\\n    doSomething: function() { }   \\\\n}\\\\n\\\\n//# sourceURL=webpack:///./lib/externalLib.js?\\");

/***/ }),

/***/ \\"./submodule/submodule.ts\\":
/*!********************************!*\\\\
  !*** ./submodule/submodule.ts ***!
  \\\\********************************/
/*! no static exports found */
/***/ (function(module, exports, __webpack_require__) {

\\"use strict\\";
eval(\\"\\\\nvar externalLib = __webpack_require__(/*! externalLib */ \\\\\\"./lib/externalLib.js\\\\\\");\\\\nexternalLib.doSomething(\\\\\\"\\\\\\");\\\\nvar message = \\\\\\"Hello from submodule\\\\\\";\\\\nmodule.exports = message;\\\\n\\\\n\\\\n//# sourceURL=webpack:///./submodule/submodule.ts?\\");

/***/ })

/******/ });"
`;

exports[`build: stats 1`] = `
"    Asset   Size  Chunks             Chunk Names
bundle.js <size>    main  [emitted]  main
Entrypoint main = bundle.js
[./app.ts] <size> {main} [built]
[./lib/externalLib.js] <size> {main} [built]
[./submodule/submodule.ts] <size> {main} [built]"
`;

exports[`build: stats 2`] = `
"    Asset   Size  Chunks             Chunk Names
bundle.js <size>    main  [emitted]  main
Entrypoint main = bundle.js
[./app.ts] <size> {main} [built] [1 error]
[./lib/externalLib.js] <size> {main}
[./submodule/submodule.ts] <size> {main}

ERROR in ./test/comparison-tests/basic/app.ts
./app.ts
[90m[tsl] [39m[1m[31mERROR[39m[22m[1m[31m in [39m[22m[1m[36m./test/comparison-tests/basic/app.ts(3,13)[39m[22m
[1m[31m      TS2551: Property 'doSomething2' does not exist on type 'typeof externalLib'. Did you mean 'doSomething'?[39m[22m"
`;

exports[`build: stats 3`] = `
"    Asset   Size  Chunks             Chunk Names
bundle.js <size>    main  [emitted]  main
Entrypoint main = bundle.js
[./app.ts] <size> {main} [built]
[./lib/externalLib.js] <size> {main}
[./submodule/submodule.ts] <size> {main}"
`;

exports[`transpile only: bundle 1`] = `
"/******/ (function(modules) { // webpackBootstrap
/******/ 	// The module cache
/******/ 	var installedModules = {};
/******/
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/
/******/ 		// Check if module is in cache
/******/ 		if(installedModules[moduleId]) {
/******/ 			return installedModules[moduleId].exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = installedModules[moduleId] = {
/******/ 			i: moduleId,
/******/ 			l: false,
/******/ 			exports: {}
/******/ 		};
/******/
/******/ 		// Execute the module function
/******/ 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
/******/
/******/ 		// Flag the module as loaded
/******/ 		module.l = true;
/******/
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/
/******/
/******/ 	// expose the modules object (__webpack_modules__)
/******/ 	__webpack_require__.m = modules;
/******/
/******/ 	// expose the module cache
/******/ 	__webpack_require__.c = installedModules;
/******/
/******/ 	// define getter function for harmony exports
/******/ 	__webpack_require__.d = function(exports, name, getter) {
/******/ 		if(!__webpack_require__.o(exports, name)) {
/******/ 			Object.defineProperty(exports, name, { enumerable: true, get: getter });
/******/ 		}
/******/ 	};
/******/
/******/ 	// define __esModule on exports
/******/ 	__webpack_require__.r = function(exports) {
/******/ 		if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 			Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 		}
/******/ 		Object.defineProperty(exports, '__esModule', { value: true });
/******/ 	};
/******/
/******/ 	// create a fake namespace object
/******/ 	// mode & 1: value is a module id, require it
/******/ 	// mode & 2: merge all properties of value into the ns
/******/ 	// mode & 4: return value when already ns object
/******/ 	// mode & 8|1: behave like require
/******/ 	__webpack_require__.t = function(value, mode) {
/******/ 		if(mode & 1) value = __webpack_require__(value);
/******/ 		if(mode & 8) return value;
/******/ 		if((mode & 4) && typeof value === 'object' && value && value.__esModule) return value;
/******/ 		var ns = Object.create(null);
/******/ 		__webpack_require__.r(ns);
/******/ 		Object.defineProperty(ns, 'default', { enumerable: true, value: value });
/******/ 		if(mode & 2 && typeof value != 'string') for(var key in value) __webpack_require__.d(ns, key, function(key) { return value[key]; }.bind(null, key));
/******/ 		return ns;
/******/ 	};
/******/
/******/ 	// getDefaultExport function for compatibility with non-harmony modules
/******/ 	__webpack_require__.n = function(module) {
/******/ 		var getter = module && module.__esModule ?
/******/ 			function getDefault() { return module['default']; } :
/******/ 			function getModuleExports() { return module; };
/******/ 		__webpack_require__.d(getter, 'a', getter);
/******/ 		return getter;
/******/ 	};
/******/
/******/ 	// Object.prototype.hasOwnProperty.call
/******/ 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };
/******/
/******/ 	// __webpack_public_path__
/******/ 	__webpack_require__.p = \\"\\";
/******/
/******/
/******/ 	// Load entry module and return exports
/******/ 	return __webpack_require__(__webpack_require__.s = \\"./app.ts\\");
/******/ })
/************************************************************************/
/******/ ({

/***/ \\"./app.ts\\":
/*!****************!*\\\\
  !*** ./app.ts ***!
  \\\\****************/
/*! no static exports found */
/***/ (function(module, exports, __webpack_require__) {

\\"use strict\\";
eval(\\"\\\\nObject.defineProperty(exports, \\\\\\"__esModule\\\\\\", { value: true });\\\\nvar submodule = __webpack_require__(/*! ./submodule/submodule */ \\\\\\"./submodule/submodule.ts\\\\\\");\\\\nvar externalLib = __webpack_require__(/*! externalLib */ \\\\\\"./lib/externalLib.js\\\\\\");\\\\nexternalLib.doSomething(submodule);\\\\n\\\\n\\\\n//# sourceURL=webpack:///./app.ts?\\");

/***/ }),

/***/ \\"./lib/externalLib.js\\":
/*!****************************!*\\\\
  !*** ./lib/externalLib.js ***!
  \\\\****************************/
/*! no static exports found */
/***/ (function(module, exports) {

eval(\\"module.exports = {\\\\n    doSomething: function() { }   \\\\n}\\\\n\\\\n//# sourceURL=webpack:///./lib/externalLib.js?\\");

/***/ }),

/***/ \\"./submodule/submodule.ts\\":
/*!********************************!*\\\\
  !*** ./submodule/submodule.ts ***!
  \\\\********************************/
/*! no static exports found */
/***/ (function(module, exports, __webpack_require__) {

\\"use strict\\";
eval(\\"\\\\nvar externalLib = __webpack_require__(/*! externalLib */ \\\\\\"./lib/externalLib.js\\\\\\");\\\\nexternalLib.doSomething(\\\\\\"\\\\\\");\\\\nvar message = \\\\\\"Hello from submodule\\\\\\";\\\\nmodule.exports = message;\\\\n\\\\n\\\\n//# sourceURL=webpack:///./submodule/submodule.ts?\\");

/***/ })

/******/ });"
`;

exports[`transpile only: bundle 2`] = `
"/******/ (function(modules) { // webpackBootstrap
/******/ 	// The module cache
/******/ 	var installedModules = {};
/******/
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/
/******/ 		// Check if module is in cache
/******/ 		if(installedModules[moduleId]) {
/******/ 			return installedModules[moduleId].exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = installedModules[moduleId] = {
/******/ 			i: moduleId,
/******/ 			l: false,
/******/ 			exports: {}
/******/ 		};
/******/
/******/ 		// Execute the module function
/******/ 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
/******/
/******/ 		// Flag the module as loaded
/******/ 		module.l = true;
/******/
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/
/******/
/******/ 	// expose the modules object (__webpack_modules__)
/******/ 	__webpack_require__.m = modules;
/******/
/******/ 	// expose the module cache
/******/ 	__webpack_require__.c = installedModules;
/******/
/******/ 	// define getter function for harmony exports
/******/ 	__webpack_require__.d = function(exports, name, getter) {
/******/ 		if(!__webpack_require__.o(exports, name)) {
/******/ 			Object.defineProperty(exports, name, { enumerable: true, get: getter });
/******/ 		}
/******/ 	};
/******/
/******/ 	// define __esModule on exports
/******/ 	__webpack_require__.r = function(exports) {
/******/ 		if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 			Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 		}
/******/ 		Object.defineProperty(exports, '__esModule', { value: true });
/******/ 	};
/******/
/******/ 	// create a fake namespace object
/******/ 	// mode & 1: value is a module id, require it
/******/ 	// mode & 2: merge all properties of value into the ns
/******/ 	// mode & 4: return value when already ns object
/******/ 	// mode & 8|1: behave like require
/******/ 	__webpack_require__.t = function(value, mode) {
/******/ 		if(mode & 1) value = __webpack_require__(value);
/******/ 		if(mode & 8) return value;
/******/ 		if((mode & 4) && typeof value === 'object' && value && value.__esModule) return value;
/******/ 		var ns = Object.create(null);
/******/ 		__webpack_require__.r(ns);
/******/ 		Object.defineProperty(ns, 'default', { enumerable: true, value: value });
/******/ 		if(mode & 2 && typeof value != 'string') for(var key in value) __webpack_require__.d(ns, key, function(key) { return value[key]; }.bind(null, key));
/******/ 		return ns;
/******/ 	};
/******/
/******/ 	// getDefaultExport function for compatibility with non-harmony modules
/******/ 	__webpack_require__.n = function(module) {
/******/ 		var getter = module && module.__esModule ?
/******/ 			function getDefault() { return module['default']; } :
/******/ 			function getModuleExports() { return module; };
/******/ 		__webpack_require__.d(getter, 'a', getter);
/******/ 		return getter;
/******/ 	};
/******/
/******/ 	// Object.prototype.hasOwnProperty.call
/******/ 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };
/******/
/******/ 	// __webpack_public_path__
/******/ 	__webpack_require__.p = \\"\\";
/******/
/******/
/******/ 	// Load entry module and return exports
/******/ 	return __webpack_require__(__webpack_require__.s = \\"./app.ts\\");
/******/ })
/************************************************************************/
/******/ ({

/***/ \\"./app.ts\\":
/*!****************!*\\\\
  !*** ./app.ts ***!
  \\\\****************/
/*! no static exports found */
/***/ (function(module, exports, __webpack_require__) {

\\"use strict\\";
eval(\\"\\\\nObject.defineProperty(exports, \\\\\\"__esModule\\\\\\", { value: true });\\\\nvar submodule = __webpack_require__(/*! ./submodule/submodule */ \\\\\\"./submodule/submodule.ts\\\\\\");\\\\nvar externalLib = __webpack_require__(/*! externalLib */ \\\\\\"./lib/externalLib.js\\\\\\");\\\\nexternalLib.doSomething2(submodule);\\\\n\\\\n\\\\n//# sourceURL=webpack:///./app.ts?\\");

/***/ }),

/***/ \\"./lib/externalLib.js\\":
/*!****************************!*\\\\
  !*** ./lib/externalLib.js ***!
  \\\\****************************/
/*! no static exports found */
/***/ (function(module, exports) {

eval(\\"module.exports = {\\\\n    doSomething: function() { }   \\\\n}\\\\n\\\\n//# sourceURL=webpack:///./lib/externalLib.js?\\");

/***/ }),

/***/ \\"./submodule/submodule.ts\\":
/*!********************************!*\\\\
  !*** ./submodule/submodule.ts ***!
  \\\\********************************/
/*! no static exports found */
/***/ (function(module, exports, __webpack_require__) {

\\"use strict\\";
eval(\\"\\\\nvar externalLib = __webpack_require__(/*! externalLib */ \\\\\\"./lib/externalLib.js\\\\\\");\\\\nexternalLib.doSomething(\\\\\\"\\\\\\");\\\\nvar message = \\\\\\"Hello from submodule\\\\\\";\\\\nmodule.exports = message;\\\\n\\\\n\\\\n//# sourceURL=webpack:///./submodule/submodule.ts?\\");

/***/ })

/******/ });"
`;

exports[`transpile only: bundle 3`] = `
"/******/ (function(modules) { // webpackBootstrap
/******/ 	// The module cache
/******/ 	var installedModules = {};
/******/
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/
/******/ 		// Check if module is in cache
/******/ 		if(installedModules[moduleId]) {
/******/ 			return installedModules[moduleId].exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = installedModules[moduleId] = {
/******/ 			i: moduleId,
/******/ 			l: false,
/******/ 			exports: {}
/******/ 		};
/******/
/******/ 		// Execute the module function
/******/ 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
/******/
/******/ 		// Flag the module as loaded
/******/ 		module.l = true;
/******/
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/
/******/
/******/ 	// expose the modules object (__webpack_modules__)
/******/ 	__webpack_require__.m = modules;
/******/
/******/ 	// expose the module cache
/******/ 	__webpack_require__.c = installedModules;
/******/
/******/ 	// define getter function for harmony exports
/******/ 	__webpack_require__.d = function(exports, name, getter) {
/******/ 		if(!__webpack_require__.o(exports, name)) {
/******/ 			Object.defineProperty(exports, name, { enumerable: true, get: getter });
/******/ 		}
/******/ 	};
/******/
/******/ 	// define __esModule on exports
/******/ 	__webpack_require__.r = function(exports) {
/******/ 		if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 			Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 		}
/******/ 		Object.defineProperty(exports, '__esModule', { value: true });
/******/ 	};
/******/
/******/ 	// create a fake namespace object
/******/ 	// mode & 1: value is a module id, require it
/******/ 	// mode & 2: merge all properties of value into the ns
/******/ 	// mode & 4: return value when already ns object
/******/ 	// mode & 8|1: behave like require
/******/ 	__webpack_require__.t = function(value, mode) {
/******/ 		if(mode & 1) value = __webpack_require__(value);
/******/ 		if(mode & 8) return value;
/******/ 		if((mode & 4) && typeof value === 'object' && value && value.__esModule) return value;
/******/ 		var ns = Object.create(null);
/******/ 		__webpack_require__.r(ns);
/******/ 		Object.defineProperty(ns, 'default', { enumerable: true, value: value });
/******/ 		if(mode & 2 && typeof value != 'string') for(var key in value) __webpack_require__.d(ns, key, function(key) { return value[key]; }.bind(null, key));
/******/ 		return ns;
/******/ 	};
/******/
/******/ 	// getDefaultExport function for compatibility with non-harmony modules
/******/ 	__webpack_require__.n = function(module) {
/******/ 		var getter = module && module.__esModule ?
/******/ 			function getDefault() { return module['default']; } :
/******/ 			function getModuleExports() { return module; };
/******/ 		__webpack_require__.d(getter, 'a', getter);
/******/ 		return getter;
/******/ 	};
/******/
/******/ 	// Object.prototype.hasOwnProperty.call
/******/ 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };
/******/
/******/ 	// __webpack_public_path__
/******/ 	__webpack_require__.p = \\"\\";
/******/
/******/
/******/ 	// Load entry module and return exports
/******/ 	return __webpack_require__(__webpack_require__.s = \\"./app.ts\\");
/******/ })
/************************************************************************/
/******/ ({

/***/ \\"./app.ts\\":
/*!****************!*\\\\
  !*** ./app.ts ***!
  \\\\****************/
/*! no static exports found */
/***/ (function(module, exports, __webpack_require__) {

\\"use strict\\";
eval(\\"\\\\nObject.defineProperty(exports, \\\\\\"__esModule\\\\\\", { value: true });\\\\nvar submodule = __webpack_require__(/*! ./submodule/submodule */ \\\\\\"./submodule/submodule.ts\\\\\\");\\\\nvar externalLib = __webpack_require__(/*! externalLib */ \\\\\\"./lib/externalLib.js\\\\\\");\\\\nexternalLib.doSomething(submodule);\\\\n\\\\n\\\\n//# sourceURL=webpack:///./app.ts?\\");

/***/ }),

/***/ \\"./lib/externalLib.js\\":
/*!****************************!*\\\\
  !*** ./lib/externalLib.js ***!
  \\\\****************************/
/*! no static exports found */
/***/ (function(module, exports) {

eval(\\"module.exports = {\\\\n    doSomething: function() { }   \\\\n}\\\\n\\\\n//# sourceURL=webpack:///./lib/externalLib.js?\\");

/***/ }),

/***/ \\"./submodule/submodule.ts\\":
/*!********************************!*\\\\
  !*** ./submodule/submodule.ts ***!
  \\\\********************************/
/*! no static exports found */
/***/ (function(module, exports, __webpack_require__) {

\\"use strict\\";
eval(\\"\\\\nvar externalLib = __webpack_require__(/*! externalLib */ \\\\\\"./lib/externalLib.js\\\\\\");\\\\nexternalLib.doSomething(\\\\\\"\\\\\\");\\\\nvar message = \\\\\\"Hello from submodule\\\\\\";\\\\nmodule.exports = message;\\\\n\\\\n\\\\n//# sourceURL=webpack:///./submodule/submodule.ts?\\");

/***/ })

/******/ });"
`;

exports[`transpile only: stats 1`] = `
"    Asset   Size  Chunks             Chunk Names
bundle.js <size>    main  [emitted]  main
Entrypoint main = bundle.js
[./app.ts] <size> {main} [built]
[./lib/externalLib.js] <size> {main} [built]
[./submodule/submodule.ts] <size> {main} [built]"
`;

exports[`transpile only: stats 2`] = `
"    Asset   Size  Chunks             Chunk Names
bundle.js <size>    main  [emitted]  main
Entrypoint main = bundle.js
[./app.ts] <size> {main} [built]
[./lib/externalLib.js] <size> {main}
[./submodule/submodule.ts] <size> {main}"
`;

exports[`transpile only: stats 3`] = `
"    Asset   Size  Chunks             Chunk Names
bundle.js <size>    main  [emitted]  main
Entrypoint main = bundle.js
[./app.ts] <size> {main} [built]
[./lib/externalLib.js] <size> {main}
[./submodule/submodule.ts] <size> {main}"
`;
